# mlops_rep

./: .gitignore  README.md  pyproject.toml
data/: samsung_test.txt:Zone.Identifier  samsung_test_labels.txt:Zone.Identifier  samsung_train.txt:Zone.Identifier  samsung_train_labels.txt:Zone.Identifier
