[tool.poetry]
name = "myproject"
version = "0.1.0"
description = "project for mlops"
authors = ["Ekaterina Krylova"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.3"
pandas = "^1.2.4"
scikit-learn = "^1.3.2"
hydra-core = "^1.3.2"
joblib = "^1.3.2"
mlflow = "2.10.2"
dvc = "^3.44.0"
gdrive = "^0.1.5"
dvc-gdrive = "^3.0.1"

[tool.black]
line-length = 90
target-version = ["py38"]

[tool.isort]
src_paths = ["ds_project"]
profile = "black"
line_length = 90

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
